<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/is_start_auto_change"
        android:key="is_start_auto_change"
        android:defaultValue="true"
        />
    <PreferenceCategory
        android:title="@string/start_auto_change_item"
        >
        <CheckBoxPreference
            android:key="system_voice"
            android:defaultValue="true"
            android:title="@string/system_voice"
            />
        <CheckBoxPreference
            android:key="ring_voice"
            android:defaultValue="false"
            android:title="@string/ring_voice"
            />
        <CheckBoxPreference
            android:key="music_voice"
            android:defaultValue="false"
            android:title="@string/music_voice"
            />
        <CheckBoxPreference
            android:key="alarm_voice"
            android:defaultValue="false"
            android:title="@string/alarm_voice"
            />
        <CheckBoxPreference
            android:key="call_voice"
            android:defaultValue="false"
            android:title="@string/call_voice"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/open_screen"
        >
        <CheckBoxPreference
            android:key="open_silent"
            android:defaultValue="true"
            android:title="@string/mode_silent"
            />
        <CheckBoxPreference
            android:key="open_vibrate"
            android:defaultValue="false"
            android:title="@string/mode_vibrate"
            />
        <CheckBoxPreference
            android:key="open_normal"
            android:defaultValue="false"
            android:title="@string/mode_normal"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/close_screen"
        >
        <CheckBoxPreference
            android:key="close_silent"
            android:defaultValue="false"
            android:title="@string/mode_silent"
            />
        <CheckBoxPreference
            android:key="close_vibrate"
            android:defaultValue="true"
            android:title="@string/mode_vibrate"
            />
        <CheckBoxPreference
            android:key="close_normal"
            android:defaultValue="false"
            android:title="@string/mode_normal"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/time_quantum"
        >
        <CheckBoxPreference
            android:key="time_silent"
            android:defaultValue="false"
            android:title="@string/mode_silent"
            />
        <CheckBoxPreference
            android:key="time_vibrate"
            android:defaultValue="true"
            android:title="@string/mode_vibrate"
            />
        <CheckBoxPreference
            android:key="time_normal"
            android:defaultValue="false"
            android:title="@string/mode_normal"
            />
    </PreferenceCategory>

</PreferenceScreen>